--- a/src/views/RegisterAsset.css
+++ b/src/views/RegisterAsset.css
@@ -25,7 +25,7 @@
 }
 
 /* Close button styling */
-.close-button {
+/* .close-button {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -37,7 +37,7 @@
   font-size: 18px;
   font-weight: bold;
   line-height: 1;
-}
+} */
 
 /* Title of the form */
 .asset-form h2 {
